feat(user): 初始化用户服务模块
- 添加用户登录接口及实现
- 集成Redis用于存储用户登录状态
- 引入MyBatis进行数据库操作
- 添加用户相关常量定义（角色、申请状态等）
- 实现基于手机号和密码的认证逻辑
- 添加MD5加密工具类和正则校验工具
- 配置Nacos服务发现与负载均衡
- 添加Hutool依赖以简化开发
- 初始化用户服务基础结构和配置文件
- 添加OpenFeign支持便于服务间调用
- 创建用户实体类及数据传输对象
- 添加Knife4j文档支持
- 完善用户服务Maven配置及依赖管理
- 添加.gitignore和.gitattributes文件
- 添加基础测试类和启动类
- 用户表增加唯一索引约束（手机号+角色）
- 添加全局异常处理机制基础类
- 添加JWT认证所需常量定义
- 补充接口文档YAML文件
- 移除允许循环引用配置项
- 调整父级POM依赖引入方式
- 优化依赖结构避免重复引入
- 启用Spring Boot Web和测试模块
- 添加Lombok依赖简化代码编写
- 用户服务模块完整初始化完成

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <modules>
         <module>boss-common</module>
         <module>boss-gateway</module>
-<!--        <module>boss-user-service</module>-->
+        <module>boss-user-service</module>
 <!--        <module>boss-job-service</module>-->
 <!--        <module>boss-chat-service</module>-->
 <!--        <module>boss-ai-service</module>-->
@@ -49,15 +49,30 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>1.18.42</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-web</artifactId>
-            </dependency>
         </dependencies>
     </dependencyManagement>
+    <dependencies>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.42</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
