feat(job): 初始化职位服务模块
- 新增职位相关的DTO、VO实体类
- 实现职位的增删改查基础功能
- 添加软删除字段支持
- 集成MyBatis和Redis配置
- 完善职位标签批量插入逻辑
- 增加基础数据校验和异常处理
- 配置Nacos服务发现与Feign调用
- 引入Knife4j接口文档工具
- 添加MySQL数据库连接配置
- 实现基于token的用户身份验证
- 增加详细的职位信息查询接口
- 提供职位发布状态管理功能

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <module>boss-common</module>
         <module>boss-gateway</module>
         <module>boss-user-service</module>
-<!--        <module>boss-job-service</module>-->
+        <module>boss-job-service</module>
 <!--        <module>boss-chat-service</module>-->
 <!--        <module>boss-ai-service</module>-->
 <!--        <module>boss-search-service</module>-->
@@ -69,5 +69,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 </project>
