feat(user): 实现候选人申请职位功能
- 新增CandidateController处理职位申请请求
- 创建CandidateService实现申请逻辑
- 添加CandidateMapper及XML映射文件插入申请记录
- 引入JobsClient用于获取职位基本信息
- 实现用户身份验证与职位申请信息存储
- 配置OpenFeign客户端指定服务调用接口
- 排除DataSourceAutoConfiguration避免数据库自动配置冲突

--- a/boss-gateway/src/main/resources/application.yml
+++ b/boss-gateway/src/main/resources/application.yml
@@ -8,4 +8,7 @@ spring:
   cloud:
     nacos:
       server-addr: ${spring.cloud.nacos.server-addr}
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
