feat(chat): 新增聊天服务及AI服务模块
- 初始化 boss-ai-service 和 boss-chat-service 项目结构
- 配置 Git 忽略文件，包括 IDE 和构建工具生成的文件
- 添加 Spring Boot 应用程序入口类和基础配置文件
- 实现 WebSocket 聊天功能，支持用户在线状态管理和消息推送
- 创建聊天记录存储逻辑，使用 MyBatis 操作数据库
- 引入 Redis 缓存用于用户认证信息校验
- 集成 OpenFeign 客户端调用用户服务接口
- 更新父级 pom.xml 包含新增的服务模块
- 重构 Dockerfile 支持多阶段构建所有微服务镜像
- 移除旧版 HttpRequest 获取 token 方式，改用注解方式接收 header 参数
- 删除无用的 TokenUtil 工具类，统一处理授权令牌
- 添加聊天相关常量、实体类、数据传输对象和视图对象
- 实现会话列表与聊天记录分页查询接口
- 配置 Nacos 服务发现与负载均衡支持
- 整合 knife4j 接口文档增强工具
- 优化数据库操作 SQL，移除冗余字段条件判断
- 增加 Jackson JSON 序列化支持 WebSocket 消息传输
- 提供默认应用配置文件，设置端口和服务名称等属性
- 补充基础单元测试框架支持
- 修复 .gitignore 中拼写错误，将 .vascode 更正为 .vscode

--- a/boss-chat-service/src/main/resources/application.yml
+++ b/boss-chat-service/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 server:
-  port: 9020
+  port: 9040
 spring:
   profiles:
     active: dev
   application:
-    name: boss-job-service
+    name: boss-chat-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://${spring.datasource.host}:${spring.datasource.port}/${spring.datasource.database}?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
