feat(ai): 实现AI模拟面试功能并集成Kafka消息队列
- 新增AI面试控制器InterviewController，支持SE流式响应
- 实现InterviewServiceImpl服务，集成Spring AI进行对话处理
- 配置Kafka消息队列，用于异步处理面试消息
- 添加AI UID常量类AIUidConstant，定义AI用户标识
- 更新ChatConstant和RoleConstant常量命名规范
- 修改WebSocket聊天服务，支持AI对话场景
- 扩展聊天记录实体类ChatMessage和ChatRecordVO
- 新增Feign客户端ChatsClient，用于跨服务调用聊天服务
- 配置Kafka主题和错误处理器，确保消息可靠传输
- 更新YAML配置文件，添加Kafka和Ollama相关配置项
- 调整网关路由配置，暴露AI服务接口路径
- 优化聊天服务，支持AI对话记录查询与存储
- 完善公共组件包结构，统一实体类和VO对象管理
- 升级POM依赖，引入Spring Kafka和相关工具包
- 更新API文档，补充AI面试接口说明

--- a/boss-ai-service/src/main/resources/application.yml
+++ b/boss-ai-service/src/main/resources/application.yml
@@ -9,7 +9,9 @@ spring:
     ollama:
       base-url: ${spring.ai.ollama.base-url}
       chat:
-        model: deepseek-r1:8b
+        model: ${spring.ai.chat.model}
+      init:
+        timeout: 300000
   data:
     redis:
       host: ${spring.data.redis.host}
@@ -28,6 +30,34 @@ spring:
       server-addr: ${spring.cloud.nacos.server-addr}
       discovery:
         cluster-name: XA
+  kafka:
+    bootstrap-servers: ${spring.kafka.bootstrap-servers}
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      acks: all
+      retries: 3
+      properties:
+        delivery.timeout.ms: 30000
+        request.timeout.ms: 30000
+        max.in.flight.requests.per.connection: 5
+        enable.idempotence: true
+    consumer:
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      group-id: ${spring.application.name}-group
+      auto-offset-reset: earliest
+      enable-auto-commit: false
+      properties:
+        spring.json.trusted.packages: "com.boss.bosscommon.pojo"
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+kafka:
+  topics:
+    interview-topic: interview-topic
+    retry-topic: retry-topic
+    dead-letter-topic: dead-letter-topic
+  partitions: 3
+  replicas: 1
