--- a/boss-gateway/src/main/resources/application.yml
+++ b/boss-gateway/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 30000
 spring:
   application:
     name: boss-gateway
@@ -8,6 +8,32 @@ spring:
   cloud:
     nacos:
       server-addr: ${spring.cloud.nacos.server-addr}
+    gateway:
+      routes:
+        - id: boss-user-service
+          uri: lb://boss-user-service
+          predicates:
+            - Path=/user/**
+          filters:
+            - StripPrefix=1
+        - id: boss-job-service
+          uri: lb://boss-job-service
+          predicates:
+            - Path=/jobs/**
+          filters:
+            - StripPrefix=1
+        - id: boss-chat-service
+          uri: lb://boss-chat-service
+          predicates:
+            - Path=/chat/**
+          filters:
+            - StripPrefix=1
+        - id: boss-ai-service
+          uri: lb://boss-ai-service
+          predicates:
+            - Path=/ai/**
+          filters:
+            - StripPrefix=1
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
