--- a/boss-user-service/src/main/resources/application.yml
+++ b/boss-user-service/src/main/resources/application.yml
@@ -31,6 +31,6 @@ spring:
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.activity.manage.pojo.entity
+  type-aliases-package:  com.boss.bosscommon.pojo.entity
   configuration:
     map-underscore-to-camel-case: true
