feat(search): 新增搜索服务并集成Elasticsearch
- 添加 boss-search-service 模块并配置相关依赖
- 配置 Elasticsearch 客户端及索引映射
- 实现职位、求职申请和聊天消息的搜索功能
- 添加日志配置到所有服务的 application.yml
- 创建 DTO 类用于 Elasticsearch 数据传输
- 实现搜索控制器和业务逻辑层
- 集成 IK 分词器与拼音分词器支持中文搜索
- 添加搜索接口支持关键词、城市、薪资范围等过滤条件

--- a/boss-chat-service/src/main/resources/application.yml
+++ b/boss-chat-service/src/main/resources/application.yml
@@ -55,6 +55,13 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
 
+logging:
+  logback:
+    rollingpolicy:
+      max-file-size: 100MB
+      max-history: 7
+      total-size-cap: 500MB
+
 kafka:
   topics:
     chat-record-topic: chat-record-topic
