--- a/boss-gateway/src/main/resources/application.yml
+++ b/boss-gateway/src/main/resources/application.yml
@@ -37,4 +37,9 @@ spring:
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-
+logging:
+  logback:
+    rollingpolicy:
+      max-file-size: 100MB
+      max-history: 7
+      total-size-cap: 500MB
