--- a/boss-ai-service/src/main/resources/application.yml
+++ b/boss-ai-service/src/main/resources/application.yml
@@ -54,6 +54,13 @@ spring:
     exclude:
       - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
+logging:
+  logback:
+    rollingpolicy:
+      max-file-size: 100MB
+      max-history: 7
+      total-size-cap: 500MB
+
 kafka:
   topics:
     interview-topic: interview-topic
