--- a/boss-common/src/main/resources/application.yml
+++ b/boss-common/src/main/resources/application.yml
@@ -1,3 +1,9 @@
 spring:
   application:
     name: boss-common
+logging:
+  logback:
+    rollingpolicy:
+      max-file-size: 100MB
+      max-history: 7
+      total-size-cap: 500MB
