--- a/boss-job-service/src/main/resources/application.yml
+++ b/boss-job-service/src/main/resources/application.yml
@@ -29,6 +29,13 @@ spring:
       discovery:
         cluster-name: XA
 
+logging:
+  logback:
+    rollingpolicy:
+      max-file-size: 100MB
+      max-history: 7
+      total-size-cap: 500MB
+
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.activity.manage.pojo.entity
