--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <module>boss-job-service</module>
         <module>boss-chat-service</module>
         <module>boss-ai-service</module>
-<!--        <module>boss-search-service</module>-->
+        <module>boss-search-service</module>
     </modules>
 
     <properties>
