feat(search): 实现Elasticsearch搜索功能并优化服务配置
- 添加Elasticsearch索引初始化逻辑，支持job、jobApply和chatMessage索引
- 配置Redis连接池参数，增强search服务的数据访问能力
- 引入Feign客户端支持，整合User、Jobs和Chats服务接口
- 实现聊天记录、职位申请和职位信息的全文搜索引擎
- 优化Bean映射方式，使用Builder模式替代BeanUtil.copyProperties
- 调整Elasticsearch映射配置，启用hrUid字段索引
- 添加数据同步接口，支持从各服务拉取最新数据到ES
- 修改请求头参数校验，统一使用Authorization字段
- 完善搜索接口权限控制，增加token验证逻辑
- 重构代码结构，提升系统可维护性和扩展性

--- a/boss-search-service/src/main/resources/application.yml
+++ b/boss-search-service/src/main/resources/application.yml
@@ -10,6 +10,19 @@ spring:
       server-addr: ${spring.cloud.nacos.server-addr}
       discovery:
         cluster-name: XA
+  data:
+    redis:
+      host: ${spring.data.redis.host}
+      port: ${spring.data.redis.port}
+      password: ${spring.data.redis.password}
+      database: ${spring.data.redis.database}
+      lettuce:
+        shutdown-timeout: 100ms
+        pool:
+          max-active: 10
+          max-idle: 10
+          min-idle: 1
+          time-between-eviction-runs: 10s
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
