feat(search): 集成Canal实现MySQL到Elasticsearch数据同步
- 添加Canal客户端依赖和配置
- 实现Canal消息监听和解析逻辑
- 创建职位、申请和聊天消息的索引同步服务
- 更新docker-compose配置以支持Canal服务
- 调整相关实体类和客户端接口以支持数据同步
- 移除冗余的BeanUtil导入和旧的Elasticsearch初始化方法

--- a/boss-search-service/src/main/resources/application.yml
+++ b/boss-search-service/src/main/resources/application.yml
@@ -36,3 +36,8 @@ logging:
 elasticsearch:
   host: ${elasticsearch.host}
   port: ${elasticsearch.port}
+
+canal:
+  host: ${canal.host}
+  port: 11111
+  destination: ${canal.destination}
