feat(gateway): 添加搜索服务路由和全局CORS配置和部分调试方法
- 配置boss-search-service的网关路由规则
- 添加全局CORS支持，允许所有来源、方法和头部
- 设置跨域请求凭据支持
- 完善内部接口过滤器，防止外部访问ES相关接口
- 优化响应包装过滤器，跳过WebSocket和SSE请求处理

--- a/boss-gateway/src/main/resources/application.yml
+++ b/boss-gateway/src/main/resources/application.yml
@@ -34,6 +34,19 @@ spring:
             - Path=/ai/**
           filters:
             - StripPrefix=1
+        - id: boss-search-service
+          uri: lb://boss-search-service
+          predicates:
+            - Path=/search/**
+          filters:
+            - StripPrefix=1
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            allowedOriginPatterns: "*"
+            allowedMethods: "*"
+            allowedHeaders: "*"
+            allowCredentials: true
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
